# CS418-KnowledgeGraph

./: .gitignore  Prj_29 KG.xlsx  README.md  pyproject.toml
assets/test/: 3.png.docx
experiment/: BGR2RGB.txt  RGB-refinedLLM.txt  RGBwithCustomSharpening.txt  baseline.txt  ground-truth.txt  test.py
results/1/: 1.txt
results/1/extracted_images/: label.json
results/Screenshot 2025-12-11 080214/: Screenshot 2025-12-11 080214.txt
results/image/: image.txt
results/page_20/: page_20.txt
results/tables/: extracted_table_0.html
src/: convert_pdf_to_image.py  image_extractor.py  label_processor.py  main.py  model.py  text_cleanup.py
